Bug 410092 - Ark crashes if you close it while decompressing a file.
Summary: Ark crashes if you close it while decompressing a file.
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords: drkonqi
: 414149 418676 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-07-22 06:08 UTC by Tony
Modified: 2022-09-08 17:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.2
Sentry Crash Report:


Attachments
Evidence (1.53 MB, video/mp4)
2019-07-22 06:16 UTC, Tony
Details
New crash information added by DrKonqi (9.17 KB, text/plain)
2020-11-13 18:45 UTC, Tony
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2019-07-22 06:08:23 UTC
Application: ark (19.11.70)

Qt Version: 5.13.0
Frameworks Version: 5.61.0
Operating System: Linux 5.1.16-1-default x86_64
Distribution: openSUSE Tumbleweed

-- Information about the crash:
- What I was doing when the application crashed:

I downloaded linux-5.2-ck.zip and opened it in ark.
Drag and drop linux-5.2-ck directory to my current dir ~/Documents
Closing ark at this point will end in it hanging and if you chose to "wait longer" when prompted to terminate it it will end in it crashing.

The crash can be reproduced every time.

-- Backtrace:
Application: Ark (ark), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa730593800 (LWP 19038))]

Thread 3 (Thread 0x7fa728877700 (LWP 19051)):
#0  0x00007fa72d93f224 in g_mutex_unlock () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fa72d98d24d in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fa72d98d46f in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fa72f3aaceb in QEventDispatcherGlib::processEvents (this=0x7fa71c000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007fa72f3532eb in QEventLoop::exec (this=this@entry=0x7fa728876d70, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#5  0x00007fa72f18bf91 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#6  0x00007fa72e9b74f6 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007fa72f18d112 in QThreadPrivate::start (arg=0x7fa72ea39d80) at thread/qthread_unix.cpp:360
#8  0x00007fa72e4b0faa in start_thread () from /lib64/libpthread.so.0
#9  0x00007fa730b1573f in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fa72a947700 (LWP 19048)):
#0  0x00007fa730b0acbf in poll () from /lib64/libc.so.6
#1  0x00007fa72d3ed742 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007fa72d3ee3fa in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fa72abb2f48 in QXcbEventQueue::run (this=0x55fd8aa65090) at qxcbeventqueue.cpp:228
#4  0x00007fa72f18d112 in QThreadPrivate::start (arg=0x55fd8aa65090) at thread/qthread_unix.cpp:360
#5  0x00007fa72e4b0faa in start_thread () from /lib64/libpthread.so.0
#6  0x00007fa730b1573f in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fa730593800 (LWP 19038)):
[KCrash Handler]
#6  0x0000000000000101 in ?? ()
#7  0x00007fa73030798f in KJob::kill (this=0x55fd8c361b50, verbosity=verbosity@entry=KJob::Quietly) at /usr/src/debug/kcoreaddons-5.60.0git.20190713T082909~18b54cd-ku.73.1.x86_64/src/lib/jobs/kjob.cpp:117
#8  0x00007fa721840603 in JobTracker::~JobTracker (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/part/jobtracker.cpp:42
#9  0x00007fa721840669 in JobTracker::~JobTracker (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/part/jobtracker.cpp:44
#10 0x00007fa72f37d65e in QObjectPrivate::deleteChildren (this=this@entry=0x55fd8af06360) at kernel/qobject.cpp:2019
#11 0x00007fa72fdc7639 in QWidget::~QWidget (this=0x55fd8afa8ba0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1708
#12 0x00007fa72fdc7829 in QWidget::~QWidget (this=0x55fd8afa8ba0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1570
#13 0x00007fa730967817 in KParts::Part::~Part (this=<optimized out>, __vtt_parm=<optimized out>, this=<optimized out>, __vtt_parm=<optimized out>) at /usr/include/c++/9/bits/atomic_base.h:413
#14 0x00007fa721861c5d in Ark::Part::~Part (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/part/interface.h:37
#15 0x00007fa721861e89 in Ark::Part::~Part (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/part/part.cpp:242
#16 0x000055fd89ff6cb7 in MainWindow::~MainWindow (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/app/mainwindow.cpp:76
#17 0x000055fd89ff6d79 in MainWindow::~MainWindow (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/app/mainwindow.cpp:78
#18 0x00007fa72f3800d0 in QObject::event (this=this@entry=0x55fd8af1d3f0, e=e@entry=0x55fd8b5477e0) at kernel/qobject.cpp:1251
#19 0x00007fa72fdcbcb0 in QWidget::event (this=this@entry=0x55fd8af1d3f0, event=event@entry=0x55fd8b5477e0) at kernel/qwidget.cpp:9390
#20 0x00007fa72fedee34 in QMainWindow::event (this=0x55fd8af1d3f0, event=0x55fd8b5477e0) at widgets/qmainwindow.cpp:1343
#21 0x00007fa73062d653 in KMainWindow::event (this=<optimized out>, ev=<optimized out>) at /usr/src/debug/kxmlgui-5.60.0git.20190719T111210~d4af86d-ku.48.1.x86_64/src/kmainwindow.cpp:871
#22 0x00007fa7305fe089 in KXmlGuiWindow::event (this=0x55fd8af1d3f0, ev=0x55fd8b5477e0) at /usr/src/debug/kxmlgui-5.60.0git.20190719T111210~d4af86d-ku.48.1.x86_64/src/kxmlguiwindow.cpp:122
#23 0x00007fa72fd89c42 in QApplicationPrivate::notify_helper (this=this@entry=0x55fd8aa3f300, receiver=receiver@entry=0x55fd8af1d3f0, e=e@entry=0x55fd8b5477e0) at kernel/qapplication.cpp:3740
#24 0x00007fa72fd92ec0 in QApplication::notify (this=0x7ffc182b12b0, receiver=0x55fd8af1d3f0, e=0x55fd8b5477e0) at kernel/qapplication.cpp:3486
#25 0x00007fa72f354692 in QCoreApplication::notifyInternal2 (receiver=0x55fd8af1d3f0, event=0x55fd8b5477e0) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#26 0x00007fa72f357328 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55fd8aa3ec70) at kernel/qcoreapplication.cpp:1810
#27 0x00007fa72f3ab693 in postEventSourceDispatch (s=0x55fd8ab0d6b0) at kernel/qeventdispatcher_glib.cpp:277
#28 0x00007fa72d98b683 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007fa72d98d430 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007fa72d98d46f in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007fa72f3aacd1 in QEventDispatcherGlib::processEvents (this=0x55fd8ab178b0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#32 0x00007fa72f3532eb in QEventLoop::exec (this=this@entry=0x7ffc182b1190, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#33 0x00007fa72f35ae62 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#34 0x000055fd89fec54c in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/ark-19.11.70git.20190717T225428~5bc23e40-ku.135.2.x86_64/app/main.cpp:344
[Inferior 1 (process 19038) detached]

The reporter indicates this bug may be a duplicate of or related to bug 389017.

Possible duplicates by query: bug 402548, bug 402057, bug 393772, bug 389017, bug 382387.

Reported using DrKonqi
Comment 1 Tony 2019-07-22 06:16:02 UTC
Created attachment 121672 [details]
Evidence

How to reproduce.
Comment 2 Tony 2020-11-13 18:45:47 UTC
Created attachment 133312 [details]
New crash information added by DrKonqi

ark (21.03.70) using Qt 5.15.1

- What I was doing when the application crashed:

Same steps, open the compressed file, while it is decompressing close ark.

-- Backtrace (Reduced):
#4  QHashData::nextNode (node=node@entry=0x558e27e76390) at tools/qhash.cpp:591
#5  0x00007fac3295523b in QHash<KJob*, QHashDummyValue>::const_iterator::operator++ (this=<synthetic pointer>) at /usr/include/qt5/QtCore/qhash.h:425
#6  QSet<KJob*>::const_iterator::operator++ (this=<synthetic pointer>) at /usr/include/qt5/QtCore/qset.h:174
#7  JobTracker::~JobTracker (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-20.11.70git.20201112T063430~003b4a45-ku.31.1.x86_64/part/jobtracker.cpp:41
#8  0x00007fac32955299 in JobTracker::~JobTracker (this=<optimized out>, this=<optimized out>) at /usr/src/debug/ark-20.11.70git.20201112T063430~003b4a45-ku.31.1.x86_64/part/jobtracker.cpp:44
Comment 3 Tony 2020-11-13 18:49:32 UTC
Possible duplicates : 389017 414149
Comment 4 Justin Zobel 2020-12-01 08:20:53 UTC
I'm able to replicate this.
Comment 5 Elvis Angelaccio 2021-01-05 20:48:08 UTC
*** Bug 414149 has been marked as a duplicate of this bug. ***
Comment 6 Elvis Angelaccio 2021-01-05 20:48:16 UTC
*** Bug 418676 has been marked as a duplicate of this bug. ***
Comment 7 Elvis Angelaccio 2021-01-05 21:06:14 UTC
Git commit a41e69b30cc07dd758849f8685d322150459e4f1 by Elvis Angelaccio.
Committed on 05/01/2021 at 21:03.
Pushed by elvisangelaccio into branch 'release/20.12'.

Fix crash after closing the window while loading a TAR archive

A first problem was in LibarchivePlugin::list() not checking
isInterruptionRequested() after the while loop. It was wrongly calling
emitCorruptArchive() instead of aborting as requested.

But according to the stacktrace, the actual crash seemed to be caused by
the for() loop over qAsConst(m_jobs):

    #0  0x00007ffff5f6a023 in QHashData::nextNode(QHashData::Node*) () from /usr/lib/libQt5Core.so.5
    #1  0x00007fffe1dcb2ec in QHash<KJob*, QHashDummyValue>::const_iterator::operator++ (this=0x7fffffffc4d0) at /usr/include/qt/QtCore/qhash.h:426
    #2  0x00007fffe1dcadac in QSet<KJob*>::const_iterator::operator++ (this=0x7fffffffc4d0) at /usr/include/qt/QtCore/qset.h:174
    #3  0x00007fffe1dca17e in JobTracker::~JobTracker (this=0x555555c319c0) at ../part/jobtracker.cpp:41

Porting to QSetIterator fixes the crash.
FIXED-IN: 20.12.2

M  +3    -1    part/jobtracker.cpp
M  +4    -0    plugins/libarchive/libarchiveplugin.cpp

https://invent.kde.org/utilities/ark/commit/a41e69b30cc07dd758849f8685d322150459e4f1
Comment 8 Patrick Silva 2021-02-13 14:03:07 UTC
I can reproduce this crash on Arch Linux running Ark 20.12.2 and on neon unstable
using a .tar file containing +2k jpg files. But the crash does not occur consistently. Below you can see the backtrace generated on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Graphics Platform: Wayland

Application: Ark (ark), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f257a9ca380 (LWP 3870))]
[New LWP 3871]
[New LWP 3872]
[New LWP 3873]
[New LWP 3874]
[New LWP 3875]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f257e4f3aff in __GI___poll (fds=fds@entry=0x7ffd0beae0e8, nfds=nfds@entry=1, timeout=timeout@entry=1000) at ../sysdeps/unix/sysv/linux/poll.c:29

Thread 6 (Thread 0x7f2574919700 (LWP 3875)):
#0  0x00007f257e4f3aff in __GI___poll (fds=0x7f255c005240, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f257d03b18e in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7f255c005240, timeout=<optimized out>, context=0x7f255c000c20) at ../../../glib/gmain.c:4346
#2  g_main_context_iterate (context=context@entry=0x7f255c000c20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4042
#3  0x00007f257d03b2c3 in g_main_context_iteration (context=0x7f255c000c20, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#4  0x00007f257eabefbb in QEventDispatcherGlib::processEvents (this=0x7f255c000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f257ea631ab in QEventLoop::exec (this=this@entry=0x7f2574918cb0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#6  0x00007f257e87da12 in QThread::exec (this=this@entry=0x7f257df36d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#7  0x00007f257deb2f4b in QDBusConnectionManager::run (this=0x7f257df36d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#8  0x00007f257e87ebac in QThreadPrivate::start (arg=0x7f257df36d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:329
#9  0x00007f257d95c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#10 0x00007f257e500293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f2576a74700 (LWP 3874)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56476783e2c8) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56476783e278, cond=0x56476783e2a0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56476783e2a0, mutex=0x56476783e278) at pthread_cond_wait.c:638
#3  0x00007f2578971e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f2578971a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f257d95c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f257e500293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f2577275700 (LWP 3873)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56476783e2c8) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56476783e278, cond=0x56476783e2a0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56476783e2a0, mutex=0x56476783e278) at pthread_cond_wait.c:638
#3  0x00007f2578971e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f2578971a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f257d95c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f257e500293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f2577a76700 (LWP 3872)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56476783e2c8) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56476783e278, cond=0x56476783e2a0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56476783e2a0, mutex=0x56476783e278) at pthread_cond_wait.c:638
#3  0x00007f2578971e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f2578971a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f257d95c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f257e500293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f2578277700 (LWP 3871)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56476783e2c8) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56476783e278, cond=0x56476783e2a0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56476783e2a0, mutex=0x56476783e278) at pthread_cond_wait.c:638
#3  0x00007f2578971e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f2578971a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f257d95c609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f257e500293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f257a9ca380 (LWP 3870)):
[KCrash Handler]
#6  QtWaylandClient::QWaylandWindow::decoration (this=0x0) at qwaylandwindow.cpp:854
#7  0x00007f257cc38d69 in QtWaylandClient::QWaylandShmBackingStore::windowDecoration (this=this@entry=0x564767eb23e0) at qwaylandshmbackingstore.cpp:363
#8  0x00007f257cc39756 in QtWaylandClient::QWaylandShmBackingStore::resize (this=this@entry=0x564767eb23e0, size=...) at qwaylandshmbackingstore.cpp:309
#9  0x00007f257cc39891 in QtWaylandClient::QWaylandShmBackingStore::ensureSize (this=this@entry=0x564767eb23e0) at qwaylandshmbackingstore.cpp:206
#10 0x00007f257cc398cd in QtWaylandClient::QWaylandShmBackingStore::beginPaint (this=this@entry=0x564767eb23e0, region=...) at qwaylandshmbackingstore.cpp:181
#11 0x00007f257f008058 in QBackingStore::beginPaint (this=0x564767ea44f0, region=...) at ../../include/QtGui/5.15.2/QtGui/private/../../../../../src/gui/kernel/qhighdpiscaling_p.h:203
#12 0x00007f257f54e300 in QWidgetRepaintManager::paintAndFlush (this=this@entry=0x564767eb24c0) at kernel/qwidgetrepaintmanager.cpp:976
#13 0x00007f257f54ef44 in QWidgetRepaintManager::sync (this=0x564767eb24c0) at kernel/qwidgetrepaintmanager.cpp:770
#14 0x00007f257f5786d5 in QWidgetPrivate::syncBackingStore (this=0x564767824000) at kernel/qwidget.cpp:1756
#15 0x00007f257f57f5fc in QWidget::event (this=this@entry=0x564767d0d9c0, event=event@entry=0x564767f26cb0) at kernel/qwidget.cpp:8964
#16 0x00007f257f6978c8 in QMainWindow::event (this=0x564767d0d9c0, event=0x564767f26cb0) at widgets/qmainwindow.cpp:1341
#17 0x00007f257fe3dc73 in KMainWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#18 0x00007f257fe8913b in KXmlGuiWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#19 0x00007f257f53bdc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x564767d0d9c0, e=0x564767f26cb0) at kernel/qapplication.cpp:3632
#20 0x00007f257f544bb8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3156
#21 0x00007f257ea6469a in QCoreApplication::notifyInternal2 (receiver=0x564767d0d9c0, event=0x564767f26cb0) at ../../include/QtCore/5.15.2/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#22 0x00007f257ea66fa1 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5647677dad10) at kernel/qcoreapplication.cpp:1817
#23 0x00007f257eabf947 in postEventSourceDispatch (s=0x5647678533a0) at kernel/qeventdispatcher_glib.cpp:277
#24 0x00007f257d03af9d in g_main_dispatch (context=0x564767817050) at ../../../glib/gmain.c:3309
#25 g_main_context_dispatch (context=context@entry=0x564767817050) at ../../../glib/gmain.c:3974
#26 0x00007f257d03b220 in g_main_context_iterate (context=context@entry=0x564767817050, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4047
#27 0x00007f257d03b2c3 in g_main_context_iteration (context=0x564767817050, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#28 0x00007f257eabefa2 in QEventDispatcherGlib::processEvents (this=0x564767853270, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#29 0x00007f257ea631ab in QEventLoop::exec (this=this@entry=0x7ffd0beaf440, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#30 0x00007f257ea6b354 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#31 0x0000564765e186e5 in ?? ()
#32 0x00007f257e4050b3 in __libc_start_main (main=0x564765e170d0, argc=2, argv=0x7ffd0beaf6d8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd0beaf6c8) at ../csu/libc-start.c:308
#33 0x0000564765e198be in ?? ()
[Inferior 1 (process 3870) detached]
Comment 9 Patrick Silva 2021-02-13 14:30:22 UTC
ops, I think my crash is a different issue. At least the steps to reproduce are different, see bug 432891. Sorry for noise.